--- a/ch11_Associative_Containers/.vscode/settings.json
+++ b/ch11_Associative_Containers/.vscode/settings.json
@@ -1,6 +1,6 @@
 {
     "files.associations": {
-        "map": "cpp",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "iosfwd": "cpp"
     }
 }
